--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div class="member-box" onclick="navigateToProfile('student5.html')">
-      <img src="assets/images/yashvi.png" alt="Yashvi Dubey" class="avatar-img">
+      <img src="assets/images/Yashvi.png" alt="Yashvi Dubey" class="avatar-img">
       <h2>Yashvi Dubey</h2>
       <button>View Profile</button>
     </div>
