--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="member-box" onclick="navigateToProfile('student4.html')">
-      <img src="assets/images/venecia.png" alt="Venecia Dsouza" class="avatar-img">
+      <img src="assets/images/Venecia.png" alt="Venecia Dsouza" class="avatar-img">
       <h2>Venecia Dsouza</h2>
       <button>View Profile</button>
     </div>
