--- a/profiles/student2.html
+++ b/profiles/student2.html
@@ -64,7 +64,7 @@
     <div class="profile-header card">
       <div class="avatar">
         <!-- Replace with actual member photo -->
-        <img src="..\assets\images\sakshi.PNG" alt="Sakshi Dubey">
+        <img src="..\assets\images\sakshi.png" alt="Sakshi Dubey">
       </div>
       <div class="profile-info">
         <h1>Sakshi Dubey</h1>
