--- a/profiles/student3.html
+++ b/profiles/student3.html
@@ -64,7 +64,7 @@
     <div class="profile-header card">
       <div class="avatar">
         <!-- Replace with actual member photo -->
-        <img src="../assets/images/supriya.PNG" alt="Supriya Tiwari">
+        <img src="../assets/images/supriya.png" alt="Supriya Tiwari">
       </div>
       <div class="profile-info">
         <h1>Supriya Tiwari</h1>
