--- a/profiles/student5.html
+++ b/profiles/student5.html
@@ -64,7 +64,7 @@
     <div class="profile-header card">
       <div class="avatar">
         <!-- Replace with actual member photo -->
-        <img src="../assets/images/Yashvi.PNG" alt="Yashavi Dubey">
+        <img src="../assets/images/Yashvi.png" alt="Yashavi Dubey">
       </div>
       <div class="profile-info">
         <h1>Yashavi Dubey</h1>
